// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`DenomImage renders MFX token image correctly 1`] = `
"<DocumentFragment>
  <div
    class="w-11 h-11 p-2 rounded-md dark:bg-[#ffffff0f] bg-[#0000000a]"
  >
    <img
      alt="MFX Token Icon"
      class="w-full h-full data-[loaded=false]:animate-pulse data-[loaded=false]:skeleton data-[loaded=false]:bg-gray-300"
      height="44"
      src="/logo.svg"
      width="44"
    />
  </div>
</DocumentFragment>"
`;

exports[`DenomImage renders ProfileAvatar for unsupported URL 1`] = `
"<DocumentFragment>
  <div
    class="w-11 h-11 p-2 rounded-md dark:bg-[#ffffff0f] bg-[#0000000A]"
  >
    <img
      alt="Token Icon"
      class="rounded-md w-full h-full data-[loaded=false]:animate-pulse data-[loaded=false]:skeleton data-[loaded=false]:bg-gray-300"
      height="44"
      src="https://unsupported.com/token.png"
      width="44"
    />
  </div>
</DocumentFragment>"
`;

exports[`DenomImage renders image from supported URL 1`] = `
"<DocumentFragment>
  <div
    class="w-11 h-11 p-2 rounded-md dark:bg-[#ffffff0f] bg-[#0000000A]"
  >
    <img
      alt="Token Icon"
      class="rounded-md w-full h-full data-[loaded=false]:animate-pulse data-[loaded=false]:skeleton data-[loaded=false]:bg-gray-300"
      height="44"
      src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHg1aHVqa3NoMG45bzYwbHR5ODk3b2JqbHhnemlmcXpjOXB0enExMSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/zHcirZSkw8RSDhawFl/giphy.gif"
      width="44"
    />
  </div>
</DocumentFragment>"
`;
